kubernetes/weather-app-istio-deployment/auth-weather-db-deployment.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  namespace: istio-deploy
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: ghazouanihm/weatherapp-auth:10.6
        imagePullPolicy: Always
        ports:
        - name: tcp-auth
          containerPort: 8080
          protocol: TCP

---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather
  namespace: istio-deploy
spec:
  selector: 
    matchLabels:
      app: weather
  template:
    metadata:
      labels:
        app: weather
    spec:
      containers:
      - name: weather
        image: ghazouanihm/weatherapp-weather:10.6
        imagePullPolicy: Always
        ports:
        - name: tcp-weather
          containerPort: 5000
          protocol: TCP


---


apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: istio-deploy
spec:
  selector: 
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: mysql
          imagePullPolicy: Always
          ports:
          - name: tcp-db
            containerPort: 3306
            protocol: TCP
