kubernetes/weather-app-istio-deployment/ui-deploy-v1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ui-v1
  namespace: istio-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
      version: v1
  template:
    metadata:
      labels:
        app: ui
        version: v1
        istio: monitor
    spec:
      containers:
        - image: ghazouanihm/weatherapp-ui:11.4
          imagePullPolicy: Always
          name: ui
          ports:
            - name: ui-tcp
              containerPort: 3000
