kubernetes/weather-app-istio-deployment/auth-weather-db-services.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: weatherapp-db-istio-service
  namespace: istio-deploy
spec:
  ports:
  - port: 3306
    targetPort: tcp-db
    protocol: TCP
    name: db-tcp
  selector:
    app: db

---

apiVersion: v1
kind: Service
metadata:
  name: weatherapp-weather-istio-service
  namespace: istio-deploy
spec:
  ports:
  - port: 5000
    targetPort: tcp-weather
    protocol: TCP
    name: weather-tcp
  selector:
    app: weather

---

apiVersion: v1
kind: Service
metadata:
  name: weatherapp-auth-istio-service
  namespace: istio-deploy
spec:
  ports:
  - port: 8080
    targetPort: tcp-auth
    protocol: TCP
    name: auth-tcp
  selector:
    app: auth
