kubernetes/weather-app-istio-deployment/ui-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: staging
spec:
  ports:
    - name: tcp-ui
      port: 3000
  selector:
    app: ui
