kubernetes/weather-app-istio-deployment/gateway.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: ui-api
  namespace: istio-deploy
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - weatherapp.devopswithghazouani.com
