kubernetes/weather-app-istio-deployment/destination-rule.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: ui-destination-rule
  namespace: istio-deploy
spec:
  host: ui-service
  subsets:
    - name: v1
      labels:
        app: ui
        version: v1
    - name: v2
      labels:
        app: ui
        version: v2
