kubernetes/weather-app-istio-deployment/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ui-virtual-service
  namespace: istio-deploy
spec:
  hosts:
    - weatherapp.devopswithghazouani.com
    - ui-service
  gateways:
    - ui-api
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: ui
            subset: v1
          weight: 50
        - destination:
            host: ui
            subset: v2
          weight: 50
